// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailNapPeilmerk rendering should not render empty height 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        NAP Peilmerk
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        Peilmerk label
      </h2>
    </div>
  </header>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Hoogte NAP"
      value=""
    />
    <MapDetailResultItem
      label="Jaar"
      value="1919"
    />
    <MapDetailResultItem
      label="Omschrijving"
      value="Peilmerk description"
    />
  </ul>
</section>
`;

exports[`MapDetailNapPeilmerk rendering should not render without height 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        NAP Peilmerk
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        Peilmerk label
      </h2>
    </div>
  </header>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Hoogte NAP"
      value=""
    />
    <MapDetailResultItem
      label="Jaar"
      value="1919"
    />
    <MapDetailResultItem
      label="Omschrijving"
      value="Peilmerk description"
    />
  </ul>
</section>
`;

exports[`MapDetailNapPeilmerk rendering should render everything 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--pano
      "
  >
    <img
      alt="Panoramabeeld"
      className="map-detail-result__header-pano"
      src="panoUrl"
    />
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        NAP Peilmerk
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        Peilmerk label
      </h2>
    </div>
  </header>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Hoogte NAP"
      value="123 m"
    />
    <MapDetailResultItem
      label="Jaar"
      value="1919"
    />
    <MapDetailResultItem
      label="Omschrijving"
      value="Peilmerk description"
    />
  </ul>
</section>
`;

exports[`MapDetailNapPeilmerk rendering should render without pano url 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        NAP Peilmerk
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        Peilmerk label
      </h2>
    </div>
  </header>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Hoogte NAP"
      value="0 m"
    />
    <MapDetailResultItem
      label="Jaar"
      value="1919"
    />
    <MapDetailResultItem
      label="Omschrijving"
      value="Peilmerk description"
    />
  </ul>
</section>
`;
